--- a/school-admin.html
+++ b/school-admin.html
@@ -1,3 +1,6 @@
+Проблема в тому, що я не додав повний код для інших вкладок. Ось виправлена версія з повним функціоналом всіх вкладок:
+
+```html
 <!DOCTYPE html>
 <html>
 <head>
@@ -1735,3 +1738,16 @@
     </script>
 </body>
 </html>
+```
+
+Тепер всі вкладки повинні працювати правильно:
+
+1. **👨‍🏫 Вчителі** - додавання, перегляд, видалення вчителів
+2. **📚 Класи** - створення класів, перегляд учнів, розклад класу
+3. **👨‍🎓 Учні** - перегляд всіх учнів школи
+4. **📅 Розклад** - завантаження та збереження розкладів
+5. **🤖 NovaGPT** - генерація розкладів за допомогою AI
+6. **⚙️ Адміністратори** - управління адміністраторами
+7. **🌐 Сайт школи** - налаштування сайту
+
+Кожна вкладка має повний функціонал і працює незалежно від інших!
