--- a/teacher-diary.html
+++ b/teacher-diary.html
@@ -1,4 +1,4 @@
-ні просто зррби це у коді ну типу просто додай <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
