--- a/teacher-diary.html
+++ b/teacher-diary.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="uk">
 <head>
@@ -1030,7 +1031,7 @@
                     <div class="user-info">
                         <div class="user-avatar">ВЧ</div>
                         <div>
-                            <div class="user-name" id="teacherNameDisplay">Іваненко Іван Іванович</div>
+                            <div class="user-name" id="teacherNameDisplay">Тулегенов Дмитро Олексійович</div>
                             <div class="user-role">Вчитель математики</div>
                         </div>
                     </div>
@@ -1141,9 +1142,10 @@
                                 <label class="form-label">Оберіть клас для розкладу:</label>
                                 <select id="scheduleClass" class="form-control">
                                     <option value="">Оберіть клас</option>
-                                    <option value="5-А">5-А клас</option>
+                                    <option value="7_А">7_А клас</option>
                                     <option value="5-Б">5-Б клас</option>
                                     <option value="6-А">6-А клас</option>
+                                    <option value="7-В">7-В клас</option>
                                 </select>
                             </div>
                             
@@ -1259,8 +1261,8 @@
             classes: [
                 {
                     id: 1,
-                    name: "5-А",
-                    teacher: "Іваненко І.І.",
+                    name: "7_А",
+                    teacher: "Тулегенов Д.О.",
                     subject: "Математика",
                     students: 25,
                     lessons: 15,
@@ -1281,7 +1283,7 @@
                 {
                     id: 2,
                     name: "5-Б",
-                    teacher: "Петренко П.П.",
+                    teacher: "Тулегенов Д.О.",
                     subject: "Математика",
                     students: 24,
                     lessons: 12,
@@ -1296,7 +1298,7 @@
                 {
                     id: 3,
                     name: "6-А",
-                    teacher: "Сидоренко С.С.",
+                    teacher: "Тулегенов Д.О.",
                     subject: "Математика",
                     students: 26,
                     lessons: 18,
@@ -1306,6 +1308,96 @@
                         "Учень 3 6-А",
                         "Учень 4 6-А",
                         "Учень 5 6-А"
+                    ]
+                },
+                {
+                    id: 4,
+                    name: "7-В",
+                    teacher: "Тулегенов Д.О.",
+                    subject: "Математика",
+                    students: 27,
+                    lessons: 0,
+                    studentsList: [
+                        "Алексеєва Марго",
+                        "Веклич Артем",
+                        "Іван Парфкеюк",
+                        "Кметь Богдан",
+                        "Ліза Перетятько",
+                        "Меть Даша",
+                        "Мех Марія",
+                        "Несеря Богдана",
+                        "Онафріпчук Макс",
+                        "Перетятьько Ліза",
+                        "Петренко Настя",
+                        "Пінчук Настя",
+                        "Поліщук Ліза",
+                        "Поліщук Назар",
+                        "Полупан Влад",
+                        "Рубан Микола",
+                        "Сас Соня",
+                        "Степанова Аріадна",
+                        "Тулегенова Лера",
+                        "Тулегенова Ніка",
+                        "Туленов Діма",
+                        "Челпан Соня",
+                        "Щербатьк Настя",
+                        "Воронцов Михайло",
+                        "Власенко Давид",
+                        "Голодников Вадим",
+                        "Грабова Саша",
+                        "Донченко Саша",
+                        "Керичок Оля",
+                        "Костенко Влад",
+                        "Прокопенко Христина",
+                        "Слетанова Аріна",
+                        "Тулегенов Дмитро",
+                        "Тулегенова Валерія",
+                        "Щербатюк Настя"
+                    ]
+                },
+                {
+                    id: 5,
+                    name: "5-А",
+                    teacher: "Тулегенов Д.О.",
+                    subject: "Математика",
+                    students: 14,
+                    lessons: 0,
+                    studentsList: [
+                        "Аліса",
+                        "Діма",
+                        "Веліона",
+                        "Єля Мельникова",
+                        "Зубайра",
+                        "Катя",
+                        "Кіріл",
+                        "Ксюша",
+                        "Настя Ков",
+                        "Ніка",
+                        "Поліна Хлеб",
+                        "Янчик",
+                        "Кіра"
+                    ]
+                },
+                {
+                    id: 6,
+                    name: "10-А",
+                    teacher: "Тулегенов Д.О.",
+                    subject: "Математика",
+                    students: 12,
+                    lessons: 0,
+                    studentsList: [
+                        "Ава",
+                        "Аліна",
+                        "Аліса",
+                        "Даша",
+                        "Мавиле",
+                        "Маля",
+                        "Маргарита",
+                        "Надія",
+                        "Пеб",
+                        "Шака",
+                        "Малий",
+                        "Белий"
                     ]
                 }
             ],
@@ -2196,4 +2288,4 @@
 </body>
 </html>
 
-рврврв
+ооок
