--- a/teacher-diary.html
+++ b/teacher-diary.html
@@ -1,4 +1,4 @@
-
+ооок
 <!DOCTYPE html>
 <html lang="uk">
 <head>
@@ -1143,9 +1143,10 @@
                                 <select id="scheduleClass" class="form-control">
                                     <option value="">Оберіть клас</option>
                                     <option value="7_А">7_А клас</option>
-                                    <option value="5-Б">5-Б клас</option>
-                                    <option value="6-А">6-А клас</option>
-                                    <option value="7-В">7-В клас</option>
+                                    <option value="7-В (весь клас)">7-В (весь клас)</option>
+                                    <option value="7-В (2 група)">7-В (2 група)</option>
+                                    <option value="5-А">5-А клас</option>
+                                    <option value="10-А">10-А клас</option>
                                 </select>
                             </div>
                             
@@ -1282,40 +1283,10 @@
                 },
                 {
                     id: 2,
-                    name: "5-Б",
+                    name: "7-В (весь клас)",
                     teacher: "Тулегенов Д.О.",
                     subject: "Математика",
-                    students: 24,
-                    lessons: 12,
-                    studentsList: [
-                        "Учень 1 5-Б",
-                        "Учень 2 5-Б",
-                        "Учень 3 5-Б",
-                        "Учень 4 5-Б",
-                        "Учень 5 5-Б"
-                    ]
-                },
-                {
-                    id: 3,
-                    name: "6-А",
-                    teacher: "Тулегенов Д.О.",
-                    subject: "Математика",
-                    students: 26,
-                    lessons: 18,
-                    studentsList: [
-                        "Учень 1 6-А",
-                        "Учень 2 6-А",
-                        "Учень 3 6-А",
-                        "Учень 4 6-А",
-                        "Учень 5 6-А"
-                    ]
-                },
-                {
-                    id: 4,
-                    name: "7-В",
-                    teacher: "Тулегенов Д.О.",
-                    subject: "Математика",
-                    students: 27,
+                    students: 38,
                     lessons: 0,
                     studentsList: [
                         "Алексеєва Марго",
@@ -1352,11 +1323,44 @@
                         "Слетанова Аріна",
                         "Тулегенов Дмитро",
                         "Тулегенова Валерія",
-                        "Щербатюк Настя"
+                        "Щербатюк Настя",
+                        "Мартинюк Іван",
+                        "Парфенюк Іван",
+                        "Кметь Богдан"
                     ]
                 },
                 {
-                    id: 5,
+                    id: 3,
+                    name: "7-В (2 група)",
+                    teacher: "Тулегенов Д.О.",
+                    subject: "Математика",
+                    students: 17,
+                    lessons: 0,
+                    studentsList: [
+                        "Веклич Артем",
+                        "Іван Парфкеюк",
+                        "Кметь Богдан",
+                        "Ліза Перетятько",
+                        "Меть Даша Мех",
+                        "Маша",
+                        "Петренко Настя",
+                        "Пінчук Настя",
+                        "Поліщук Ліза",
+                        "Поліщук Назар",
+                        "Полупан Влад",
+                        "Рубан Микола",
+                        "Сас Соня",
+                        "Степанова Аріадна",
+                        "Тулегенова Лера",
+                        "Тулегенова Ніка",
+                        "Туленов Діма",
+                        "Челпан Соня",
+                        "Щербатьк Настя",
+                        "Воронцов Михайло"
+                    ]
+                },
+                {
+                    id: 4,
                     name: "5-А",
                     teacher: "Тулегенов Д.О.",
                     subject: "Математика",
@@ -1379,7 +1383,7 @@
                     ]
                 },
                 {
-                    id: 6,
+                    id: 5,
                     name: "10-А",
                     teacher: "Тулегенов Д.О.",
                     subject: "Математика",
@@ -2287,5 +2291,4 @@
     </script>
 </body>
 </html>
-
-ооок
+ооо
